# mdefparser

./: CMakeLists.txt  README.md
.github/: clang-format-matcher.json
.github/workflows/: build.yml  release-close.yml  release-drafter.yml  release-open.yml  release.yml
example/mdefparser/: CMakeLists.txt  main.cpp
example/mdefparser_header_only/: CMakeLists.txt  main.cpp
include/mdefparser/: exception.hpp  mdefparser.h  mugendef.hpp
include/mdefparser/impl/: mdefparser.cpp
test/: parse.cpp  parse_item.cpp
test/assets/bad/: missing_anim.def  missing_cmd.def  missing_cns.def  missing_name.def  missing_sprite.def  missing_st.def  unquoted_author.def  unquoted_displayname.def  unquoted_name.def
test/assets/good/: kfm.def  test.def
